--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
 }
 /* Global background and main color */
 :root {
-  background-image: url(Mountainous\ Sunset.jpg);
+  background-image: url(assets/wall.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -69,7 +69,7 @@ window {
   border-radius: var(--rounding);
   color: var(--theme-main-mono);
   background-color: var(--theme-bg-alt);
-  border: 2px solid var(--border);
+  border: var(--border-width) solid var(--border);
   box-shadow: inset var(--inner-shadow-distance) var(--inner-shadow-distance) var(--inner-shadow-blur) var(--inner-shadow), var(--shadow-distance) var(--shadow-distance) var(--shadow-blur)
     var(--shadow);
   position: absolute;
