--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /* Define global variables */
 :root {
-  --theme-main: #cba6f7;
-  --theme-main-mono: #cdd6f4;
+  --wallpaper: home wall6.svg;
+  --theme-main: #88eeff;
+  --theme-main-mono: #ddeeff;
   --theme-bg: #11111b;
-  --theme-bg-alt: #11111bcc;
-  --theme-bg-alt2: #11111bbb;
-  --border: #cba6f7;
+  --theme-bg-alt: #11111bbb;
+  --theme-bg-alt2: #11111b88;
+  --border: #88eeff;
   --border-width: 2px;
   --shadow: #11111b;
   --shadow-distance: 0;
@@ -15,8 +16,8 @@
   --inner-shadow-blur: 48px;
   --rounding: 24px;
   --padding: 8px;
-  --bg-blur: 24px;
-  --font-size: 16px;
+  --panel-bg-blur: 24px;
+  --font-size: 14px;
   --font-ui: "Segoe UI", "Helvetica Neue", Roboto, HelveticaNeue, system-ui,
     -apple-system, BlinkMacSystemFont, sans-serif;
   --font-monospace: JetBrainsMono, monospace;
@@ -68,25 +69,25 @@ a:active {
 }
 
 /* Scroll Bar Modification */
-/* width */
+/* width *
 ::-webkit-scrollbar {
-  width: var(--padding);
+  width: calc(var(--border-width));
 }
-/* Track */
+/* Track *
 ::-webkit-scrollbar-track {
   border-radius: var(--rounding);
 }
-/* Handle */
+/* Handle *
 ::-webkit-scrollbar-thumb {
-  background: #444;
+  background: var(--theme-main);
   border-radius: var(--rounding);
 }
-/* Handle on hover */
+/* Handle on hover *
 ::-webkit-scrollbar-thumb:hover {
-  background: #666;
+  background: var(--theme-main-mono);
   border-radius: var(--rounding);
 }
-/* The all important corner */
+/* The all important corner *
 ::-webkit-scrollbar-corner {
   background-color: transparent;
 }
@@ -108,7 +109,7 @@ window {
   border-radius: var(--rounding);
   color: var(--theme-main-mono);
   background-color: var(--theme-bg-alt);
-  backdrop-filter: blur(var(--bg-blur));
+  backdrop-filter: blur(var(--panel-bg-blur));
   border: var(--border-width) solid var(--border);
   box-shadow: inset var(--inner-shadow-distance) var(--inner-shadow-distance)
       var(--inner-shadow-blur) var(--inner-shadow),
@@ -128,7 +129,7 @@ window {
 
 .window-area {
   padding: var(--padding);
-  overflow: scroll;
+  overflow: auto;
   margin: 0 auto;
 }
 
