--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@
   --rounding: 24px;
   --btn-rounding: 6px;
   --padding: 8px;
+  --scroll-bar-width: 4px;
   --panel-bg-blur: 24px;
   --font-size: 14px;
   --large-font-size: 24px;
@@ -57,7 +58,7 @@
   color: var(--theme-main-mono);
   font-family: var(--font-ui);
   font-size: var(--font-size);
-  transition-duration: 2000ms;
+  transition-duration: 200ms;
 }
 
 /* Fonts */
@@ -93,25 +94,26 @@ a:active {
 }
 
 /* Scroll Bar Modification */
-/* width *
+/* width */
 ::-webkit-scrollbar {
-  width: calc(var(--border-width));
+  width: var(--scroll-bar-width);
+  height: var(--scroll-bar-width);
 }
-/* Track *
+/* Track */
 ::-webkit-scrollbar-track {
   border-radius: var(--rounding);
 }
-/* Handle *
+/* Handle */
 ::-webkit-scrollbar-thumb {
   background: var(--theme-main);
   border-radius: var(--rounding);
 }
-/* Handle on hover *
+/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: var(--theme-main-mono);
   border-radius: var(--rounding);
 }
-/* The all important corner *
+/* The all important corner */
 ::-webkit-scrollbar-corner {
   background-color: transparent;
 }
@@ -123,6 +125,7 @@ window {
   --width: -10px;
   --height: -10px;
   --z-index: 1;
+  --maximised: 0;
   translate: var(--x) var(--y);
   width: var(--width);
   height: var(--height);
@@ -147,11 +150,10 @@ window {
   color: var(--theme-main);
   -webkit-user-select: none;
   user-select: none;
-  border-radius: inherit;
+  /* border-radius: inherit; */
+  border-bottom: var(--border-width) solid var(--border);
   display: flex;
   justify-content: center;
-  /* Debug */
-  /* border: 1px solid orangered; */
 }
 .fill-left {
   flex: 1;
@@ -177,26 +179,41 @@ window {
   padding: var(--padding);
   overflow: auto;
   margin: 0 auto;
-  border-radius: inherit;
+  /* border-radius: inherit; */
   /* Debug */
   /* border: 1px solid orangered; */
 }
 
 .window-footer {
   /* padding-bottom: var(--padding); */
-  border-radius: inherit;
   display: flex;
   justify-content: center;
+  /* border-radius: inherit; */
+  border-top: var(--border-width) solid var(--border);
   /* Debug */
   /* border: 1px solid orangered; */
 }
 
 .window-button {
-  margin: 0 2px;
+  margin: auto 0;
+  height: 24px;
+  color: var(--theme-main);
+  background-color: var(--theme-bg);
+  transition-duration: 200ms;
   /* border: 1px solid orange; */
 }
-/* .window-button:hover {
-} */
+.close-button:hover {
+  color: var(--theme-bg);
+  background-color: var(--t-red);
+}
+.min-button:hover {
+  color: var(--theme-bg);
+  background-color: var(--t-yellow);
+}
+.max-button:hover {
+  color: var(--theme-bg);
+  background-color: var(--t-green);
+}
 
 /* Buttons */
 button {
@@ -208,9 +225,12 @@ button {
   outline: none;
 }
 
+.text-button {
+  padding-inline: var(--padding);
+}
+
 .warning-button {
   background-color: orange;
-  padding-inline: var(--padding);
   color: black;
 }
 .warning-button:hover {
@@ -240,6 +260,10 @@ code {
   /* Terminal Properties */
   color: var(--t-foreground);
   margin: 0;
+  border-bottom-left-radius: inherit;
+  border-bottom-right-radius: inherit;
+  /* Debug */
+  /* border: 1px solid orangered; */
 }
 .terminal input {
   background-color: #00000000;
