--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Define global variables */
 :root {
   --wallpaper: home wall06.svg;
-  --theme-main: #ddeeff;
+  --theme-main: #f89;
   --theme-main-mono: #ddeeff;
   --theme-bg: #11111b;
   --theme-bg-alt: #11111b88;
